sass/layout/_drawer.scss
@use "../global" as g;
@use "../mixin/mixin" as m;

/*!
 layout > drawer
------------------------------
*/
.l-drawer {
  position: fixed;
  inset: 0;
  z-index: var(--z-index-l-drawer);
  opacity: 0;
  visibility: hidden;
  transition:
    opacity var(--duration-base),
    visibility var(--duration-base);
  background-color: var(--color-bg-primary);
  width: 100%;
  height: 100dvh;
  overflow: auto;

  &.is-open {
    opacity: 1;
    visibility: visible;
  }
}

.l-drawer__body {
  width: 100%;
  height: 100%;
  color: var(--color-white);
  padding-inline: 18rem;
  position: relative;

  // 背景テクスチャを配置
  &::before {
    content: "";
    position: absolute;
    inset: 0;
    background-color: currentColor;
    mask-image: url(../img/common/bg-lattice-drawer.svg);
    @include m.mask-img(cover);
    z-index: -1;
  }

  @include g.mq() {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding-inline: 0;
  }
}

.l-drawer__nav {
  padding-top: 80rem;

  // タブレット 500px ~
  @include g.mq("sm") {
    padding-bottom: 80rem;
  }

  @include g.mq() {
    padding: 0 120rem;
    display: flex;
    align-items: center;
  }
}

.l-drawer__list {
  display: flex;
  flex-direction: column;
  gap: 20rem;

  @include g.mq() {
    width: 100%;
  }
}

.l-drawer__item {
  padding-bottom: 20rem;
  border-bottom: 1px solid currentColor;

  @include g.mq() {
    border-bottom: 1px solid color-mix(in srgb, currentColor 25%, transparent);

    &:has(.l-drawer__child-list) {
      display: grid;
      grid-template-columns: 120rem 1fr;
      gap: 63rem;
      align-items: flex-start;
    }
  }

  @media (any-hover: hover) {
    @include g.mq() {
      position: relative;

      // hover時に線が伸びる
      &::after {
        content: "";
        display: block;
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        height: 1px;
        background-image: linear-gradient(currentColor, currentColor);
        background-position: 0 100%;
        background-size: 0 1px;
        background-repeat: no-repeat;
        transition: background-size var(--duration-base);
      }

      &:has(.l-drawer__link:hover) {
        &::after {
          background-size: 100% 1px;
        }
      }
    }
  }
}

.l-drawer__link {
  @include m.font-size($font-size: 17, $line-height: 25);
  display: block;
}

.l-drawer__child-list {
  margin-top: 12rem;
  display: flex;
  flex-wrap: wrap;
  gap: 16rem 24rem;

  @include g.mq() {
    margin-top: 0;
    gap: 8rem 27rem;
  }
}

// 「事務所案内」のみ幅を指定し、child-itemの左位置を揃える
.l-drawer__item:nth-child(3) .l-drawer__child-list {
  @include g.mq() {
    width: 200rem;
    justify-content: space-between;
  }
}

.l-drawer__child-link {
  @include m.font-size($font-size: 15, $line-height: 25);
  opacity: 0.7;
  display: flex;
  align-items: center;
  gap: 6rem;

  // line
  &::before {
    content: "";
    display: block;
    width: 8rem;
    height: 1rem;
    background-color: currentColor;
  }

  @media (any-hover: hover) {
    @include g.mq() {
      transition: opacity var(--duration-base);

      &:hover {
        opacity: 1;
      }
    }
  }
}

.l-drawer__visual {
  @include g.mq() {
    position: relative;
  }
}

.l-drawer__img {
  @include g.mq() {
    opacity: 0;
    visibility: hidden;
    position: absolute;
    inset: 0;
    transition:
      opacity var(--duration-base),
      visibility var(--duration-base);

    img {
      height: 100%;
      object-fit: cover;
    }

    &.is-active {
      opacity: 1;
      visibility: visible;
    }
  }
}

.l-drawer__marquee {
  display: none;
}

// ------------------------------
// drawer open時 設定
// ------------------------------

// drawer open時 bodyタグにis-drawer-openを付与しスクロールを禁止
body.is-drawer-open {
  overflow: hidden;
}

